--- a/style.css
+++ b/style.css
@@ -216,8 +216,8 @@ main {
 @media (max-width: 900px) {
   main {
     position: relative;
-    width: 94%;
-    height: 90%;
+    width: 90%;
+    height: 80%;
     background-color: rgba(255, 255, 255, 0.35);
     backdrop-filter: blur(200px);
     filter: blur();
@@ -318,10 +318,10 @@ main {
     top: 4%;
   }
   .btn--roll {
-    top: 21%;
+    top: 24%;
   }
   .btn--hold {
-    top: 38%;
+    top: 44%;
   }
   
   .btn:hover {
@@ -412,7 +412,7 @@ main {
     justify-content: center;
     align-items: center;
     z-index: 666;
-    background-color: #888;
+    background-color: #E8EBEE;
     position: absolute;
     width: 100%;
     height: 100vh;
@@ -426,6 +426,6 @@ main {
   }
 
   .for-mobile img {
-    width: 50%;
+    width: 90%;
   }
 }
