--- a/style.css
+++ b/style.css
@@ -217,7 +217,7 @@ main {
   main {
     position: relative;
     width: 90%;
-    height: 80%;
+    height: 90vh;
     background-color: rgba(255, 255, 255, 0.35);
     backdrop-filter: blur(200px);
     filter: blur();
