--- a/style.css
+++ b/style.css
@@ -101,6 +101,10 @@ main {
 
 /* ABSOLUTE POSITIONED ELEMENTS */
 .btn {
+  -webkit-user-select: none;  /* Chrome all / Safari all */
+  -moz-user-select: none;     /* Firefox all */
+  -ms-user-select: none;      /* IE 10+ */
+  user-select: none;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
