--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
   padding: 0;
   box-sizing: border-box;
   touch-action: none;
+  -webkit-user-select: none; /* Safari */        
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
 }
 
 html {
